# tw-source-finder

./: CHANGELOG.rst  CODEOWNERS  LICENSE  README.md  ToDo.md  pyproject.toml  requirements.txt
docs/: requirements.txt
docs/src/: conf.py  index.rst
docs/src/api/: index.rst
docs/src/api/package/: adjust_reference_position.rst  beam_to_pixels.rst  breizorro_extract.rst  calculate_source_parms.rst  check_array.rst  combine_images.rst  conv_image.rst  coords.rst  cosmocalc.rst  equipartition.rst  generate_manual_polygon.rst  generate_mask_polygons.rst  generate_morphology_image.rst  get_alasky_image.rst  get_galaxy_parameters.rst  get_morphology_images.rst  image_math.rst  index.rst  inpainter.rst  insert_beam_parameters.rst  larrys_script.rst  make_morphology_mask.rst  process_polygon_data.rst  pyheal.rst  read_input_table.rst  reproject_images.rst
docs/src/api/scripts/: get_simple_source_list.rst
docs/src/guide/: readme.rst  user_guide.rst
src/tw_source_finder/: adjust_reference_position.py  beam_to_pixels.py  breizorro_extract.py  calculate_source_parms.py  check_array.py  combine_images.py  conv_image.py  coords.py  cosmocalc.py  equipartition.py  generate_manual_polygon.py  generate_mask_polygons.py  generate_morphology_image.py  get_alasky_image.py  get_galaxy_parameters.py  get_morphology_images.py  image_math.py  inpainter.py  insert_beam_parameters.py  larrys_script.py  make_morphology_mask.py  process_polygon_data.py  pyheal.py  read_input_table.py  reproject_images.py
src/tw_source_finder/scripts/: get_simple_source_list.py
